--- a/src/Pages/TestLogin.css
+++ b/src/Pages/TestLogin.css
@@ -2,7 +2,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  height: 100vh;
+  width: 100vw;
+  margin-bottom: 100px;
 }
 
 .testLogin__section {
