--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -1,6 +1,5 @@
 .profile__container {
-    display: flex;
-    /* align-items: center; */
+   height: auto;
 }
 
 .profile__header-container {
@@ -59,16 +58,32 @@ height: 200px;
          }
 
 
-.profile__likes-container {
+#profile__likes-container, 
+#profile__matches-container {
     position: fixed;
     top: 350px;
     left: 15px;
-     width: 90%;
-      }
+    width: 90%;
+        }
+
+ #profile__matches-container {
+top: 500px
+        }
 
 .profile__text-container {
     display: flex;
     justify-content: space-between;
-  
+    width: 100%;
+       padding-bottom: 20px;
+     }
 
-}
+
+.profile__likes-picture {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    width: 100%;
+    height: 90px;
+    width: auto;
+    border-radius: 15px;
+  }
