--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -38,7 +38,7 @@ height: 200px;
 }
 
 .profile__name-box>h3 {
-     color: white;
+    color: white;
     padding: 16px;
     font-size: 12px;
 }
@@ -75,7 +75,7 @@ top: 500px
     justify-content: space-between;
     width: 100%;
        padding-bottom: 20px;
-     }
+            }
 
 
 .profile__likes-picture {
@@ -88,12 +88,62 @@ top: 500px
     border-radius: 15px;
   }
 
-  .profile__footer {
-    position: absolute;
+  .profile__footer {  position: absolute;
     top: 650px;
     left: 0px;
     width: 90%;
     padding-bottom: 150px;
+    text-align: start;
   }
 
-  
+  .profile__footer-text {
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+      padding: 2px;
+      left: 15px;
+      position: relative;
+  }
+
+
+  .profile__footer >h1 {
+      padding: 5px;
+      padding-left: 15px;
+      font-family: Inter;
+      font-style: normal;
+      font-weight: normal;
+      font-size: 16px;
+      line-height: 145%;
+  }
+.profile__horizontal-line {
+   position: relative;
+   left: 15px;
+   height: 0;
+   border: 1px solid #202020;
+}
+
+.profile__show-all-text {
+font-size: small;
+color: 9D9D9D;
+}
+
+#profile__star {
+    height: 5%;
+    width: 5%;
+}
+
+
+#profile__settings {
+z-index: 2;
+background: #202020;
+opacity: 0.5;
+position: relative;
+left: 10px;
+top: 10px;
+display: flex;
+align-items: center;
+justify-content: center;
+height: 40px;
+width: 40px;
+border-radius: 30px;
+}
