--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -64,32 +64,40 @@ height: 200px;
     top: 350px;
     left: 15px;
     width: 90%;
-        }
+            }
+
+#profile__matches-container {
+   margin-top: 25px;}
 
  #profile__matches-container {
-top: 500px
+top: 500px;
+margin-bottom: ;
         }
 
 .profile__text-container {
     display: flex;
     justify-content: space-between;
-    width: 100%;
+    width: 99%;
        padding-bottom: 20px;
             }
 
 
-.profile__likes-picture {
+.profile__likes-picture,
+.profile__matches-picture {
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
-    width: 100%;
-    height: 90px;
-    width: auto;
+    position: relative;
+    left: 48px;
+    height: 100px;
+    width: 100px;
     border-radius: 15px;
+    /* clip: rect(10px, 300px, 300px, 3px); */
+    margin-left: 10px;
   }
 
   .profile__footer {  position: absolute;
-    top: 650px;
+    top: 680px;
     left: 0px;
     width: 90%;
     padding-bottom: 150px;
@@ -147,3 +155,9 @@ height: 40px;
 width: 40px;
 border-radius: 30px;
 }
+
+/* #profile__star,
+#profile__star2 {
+    height: 30px;
+} */
+
