--- a/src/components/styleElements/buttons/ShotsButton/ShotsButton.css
+++ b/src/components/styleElements/buttons/ShotsButton/ShotsButton.css
@@ -3,13 +3,13 @@
   align-items: center;
   justify-content: center;
   border-radius: 50%;
-  width: 50px;
-  height: 50px;
+  width: 70px;
+  height: 70px;
 }
 .shotsButtonLike {
-  background: green;
+  background: var(--success-500);
 }
 
 .shotsButtonDislike {
-  background: red;
+  background: var(--error-500);
 }
