--- a/src/components/BottomNav/RippleButton.css
+++ b/src/components/BottomNav/RippleButton.css
@@ -23,7 +23,7 @@
   border-radius: 100%;
   position: absolute;
   opacity: 0.75;
-  background-color: var(--text-bright);
+  background-color: var(--light-100);
   animation: ripple 850ms;
 }
 
