changed prof picture, testing out new grid view for thumbnails

--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -82,19 +82,16 @@ margin-bottom: ;
             }
 
 
-.profile__likes-picture,
+
+/* .profile__likes-picture,
 .profile__matches-picture {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
-    position: relative;
-    left: 48px;
-    height: 100px;
-    width: 100px;
-    border-radius: 15px;
-    /* clip: rect(10px, 300px, 300px, 3px); */
-    margin-left: 10px;
-  }
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+ 
+} */
+
+
 
   .profile__footer {  
     position: absolute;
@@ -156,8 +153,47 @@ width: 40px;
 border-radius: 30px;
 }
 
-/* #profile__star,
-#profile__star2 {
-    height: 30px;
-} */
 
+
+/* LONG PRESS
+     figure:hover img {
+       transform: translate3d(0, 0, 0) scale(1);
+       opacity: .4;
+     } */
+
+
+     .profile__likes-picture,
+     .profile__matches-picture {
+       /* display: flex;
+       flex-direction: row; */
+       justify-content: space-evenly;
+       position: relative;
+       /* left: 48px; */
+       height: 110px;
+       width: auto;
+       border-radius: 15px;
+       /* clip: rect(10px, 300px, 300px, 3px); */
+       margin-left: 10px;
+     }
+
+     */
+
+
+    .profile__likes-picture {
+      display: grid;
+      grid-template-columns: repeat(3, auto);
+
+    }
+
+      .profile__likes-picture {
+            overflow: hidden;
+        position: relative;
+            transition: background-color .5s;
+      }
+
+        /* img {
+          width: calc(100% + 60px);
+          opacity: .7;
+          transform: translate3d(0, -20px, 0) scale(1.12);
+          transition: all .5s;
+        } */
