ripple button behavior

--- a/src/components/BottomNav/RippleButton.css
+++ b/src/components/BottomNav/RippleButton.css
@@ -12,6 +12,9 @@
   position: relative;
 }
 .ripple .rippleContainer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   position: absolute;
   top: 0;
   right: 0;
