--- a/src/components/MatchPage/MatchPage.css
+++ b/src/components/MatchPage/MatchPage.css
@@ -9,22 +9,15 @@
 }
 
 .matchPage__content {
-  width: 100vw;
   display: flex;
-  justify-content: center;
+  flex-direction: column;
   align-items: center;
+  justify-content: center;
 }
 
 .matchPage__buttons {
-  width: 100%;
+  width: 100vw;
   margin-top: 30px;
   display: flex;
   justify-content: space-evenly;
-}
-
-.matchPage__tile {
-  width: 80vw;
-  height: 60vh;
-  border-radius: 20px;
-  border: 1px solid white;
 }
