--- a/src/components/MatchPage/MatchCard/MatchCard.css
+++ b/src/components/MatchPage/MatchCard/MatchCard.css
@@ -11,7 +11,7 @@
   overflow: none;
   width: 282px;
   height: 364px;
-  border: 2px solid var(--dark-66-20);
+  border: 2px solid var(--dark-300);
   border-radius: 12px;
   z-index: 1;
 }
