--- a/src/App.css
+++ b/src/App.css
@@ -23,6 +23,8 @@ a {
   /*colors added for the matchPage*/
   --dark-66-20: rgba(66, 66, 66, 0.2);
   --dark-36-20: rgba(36, 36, 36, 0.2);
+  --dark-300-50: rgba(32, 32, 32, 0.5);
+  --dark-18: rgba(18, 18, 18, 1);
 
   --dark-900: rgba(5, 5, 5, 1);
   --dark-700: rgba(14, 14, 14, 1);
