styled ProfileEdit Page, added Dropdown / npm install @material-ui/core

--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -187,22 +187,30 @@ text-align: left;
 
 }
 
-#profile__edit-picture {
-  position: relative;
+#profile__edit-picture-container{
+  display:flex;
   align-items: center;
   justify-content: center;
+}
+
+#profile__edit-picture {
+  position: relative;
+  display:flex;
+  align-items: flex-end;
+  justify-content: flex-end;
   height: 100px;
   width: 100px;
   background-color: blue;
   border-radius: 10px;
 }
 
+
 .profile__edit-label-input {
   display: flex;
   padding: 10px;
   padding-right: 20px;
-  margin-top: 10px;
-  margin-bottom: 10px;
+  margin-top: 15px;
+  margin-bottom: 15px;
   background: rgba(5, 5, 5, 0.25);
   border-radius: 10px;
 }
@@ -219,7 +227,19 @@ text-align: left;
   text-align: start;
 }
 
+.profile__edit-grid {
+  display: flex;
+  justify-content: space-between;
+  padding-right: 20px;
+  padding-bottom: 5px;
+  align-items: center;
+}
+
 .profile__p-text {
   padding: 10px;
 }
 
+.profile__edit-containter label {
+  padding-right: 5px;
+  margin-right: 5px;
+} 
