--- a/src/components/MatchPage/MatchPage.css
+++ b/src/components/MatchPage/MatchPage.css
@@ -1,7 +1,6 @@
 .matchPage {
   width: 100vw;
   height: 100vh;
-  overflow: hidden;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -12,6 +11,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  height: 800px;
 }
 
 .matchPage__buttons {
