--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -50,11 +50,6 @@ justify-content: space-around;
 width: 235px
 }
 
-.profile__span-container-big {
-  /* display: flex;
-  word-wrap: normal */
-}
-
 .profile__span-container {
   display: flex;
   align-items: center;
@@ -64,19 +59,22 @@ width: 235px
   flex-wrap: wrap;
 }
 
-.profile__name-box>h2 {
+.profile__name-box
+>h2 {
     color: white;
     font-size: 26px;
     font-weight: bold;
 }
 
-.profile__name-box>h3 {
+.profile__name-box
+>h3 {
     color: white;
     padding: 16px;
     font-size: 12px;
 }
 
-.profile__name-box h4 {
+.profile__name-box
+ h4 {
   color: #9D9D9D;
   padding: 8px;
   font-size: 16px;
@@ -128,7 +126,8 @@ top: 600px;
     position: relative;
   }  
 
-  .profile__footer >h1 {
+  .profile__footer 
+  >h1 {
     padding: 5px;
     padding-left: 15px;
     font-family: Inter;
@@ -185,7 +184,8 @@ border-radius: 30px;
       justify-content: start;
     }
 
-#profile__liked-movies-container .profile__likes-picture {
+#profile__liked-movies-container 
+.profile__likes-picture {
    width: 60px;
    height: 60px;
 }
@@ -195,11 +195,6 @@ border-radius: 30px;
     padding: 5px;
     margin-bottom: 100px;
    }
-
-   #biggest {
-     display: flex;
-    }
-
 
 
 .profile__listed-movie-container {
@@ -212,10 +207,9 @@ border-radius: 30px;
    padding: 5px;
    height: 60px;
    display: block;
-   
-   }
+     }
 
-   .profile__listed-movie-name {
+.profile__listed-movie-name {
      position: relative;
      padding: 5px;
      height: 60px;
@@ -224,7 +218,7 @@ border-radius: 30px;
      top: 7px;
    }
 
-   .profile__listed-movie-name span {
+.profile__listed-movie-name span {
      font-size: small;
      padding-right: 5px;
      color: grey;
@@ -237,11 +231,19 @@ border-radius: 30px;
  top: 20px;
 }
 
-
 .profile__edit-containter{
   display: absolute;
   align-items: left;
   padding-left: 20px;
+  width: 320px
+  }
+
+.profile__edit-containter 
+input {
+    background: #202020;
+    color: white;
+    font-size: 18px;
+    width: 100%;
   }
 
 .profile__edit-footer {
@@ -272,6 +274,14 @@ border-radius: 30px;
   border-radius: 10px;
 }
 
+.profile__edit-span-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  justify-content: space-around;
+  width: 300px;
+  flex-wrap: wrap;
+}
 
 .profile__edit-label-input {
   display: flex;
@@ -307,31 +317,81 @@ border-radius: 30px;
   padding: 10px;
 }
 
-.profile__edit-containter label {
+.profile__edit-containter 
+label {
   padding-right: 5px;
   margin-right: 5px;
 } 
 
-.profile__edit__age-select-wrapper .profile__edit__age-select {
-  border: solid 2px green;
+.profile__edit__age-select-wrapper 
+.profile__edit__age-select {
+  /* border: solid 2px green; */
   position: relative;
   display: flex;
   flex-direction: row;
+  align-items: center;
   width: 300px;
+  height: 21px;
   color: white;
+   font-size: 16px;
+   font-family: inherit;
 }
 
 #profile__edit-inputlabel {
-  border: solid 2px blue;
+  /* border: solid 2px blue; */
   color: white;
   position: static;
   transform: none;
+  font-size: 16px;
+  font-family: inherit;
+
 }
 
-.profile__edit__age-select-wrapper .MuiInputBase-root.MuiInput-root.MuiInput-underline.MuiInputBase-formControl.MuiInput-formControl {
-  border: solid 2px red;
+/* BEETWEEN INPUT */
+.profile__edit__age-select-wrapper 
+.MuiInputBase-root.MuiInput-root.MuiInput-underline.MuiInputBase-formControl.MuiInput-formControl {
+  /* border: solid 2px red; */
   color: white;
+  height: 26px;
+  font-size: 18px;
+  top: -7px;
+  background: rgb(80, 49, 49);
+  padding: 8px;
+   font-size: 16px;
+   font-family: inherit;
 }
+
+/* Dropdown list */
+.MuiList-root.MuiMenu-list.MuiList-padding {
+  background: rgb(144, 192, 180);
+   font-size: 16px;
+   font-family: inherit;
+}
+
+.profile__edit-current-filters {
+  background: rgba(5, 5, 5, 0.25);
+  align-items: center;
+  padding: 10px;
+  border-radius: 15px;
+ }
+
+.profile__edit-current-filters 
+h4 {
+  padding-bottom: 15px;
+   }
+
+
+.profile__edit-current-filters 
+span {
+  color: #9D9D9D;
+  background: #202020;
+  font-size: 14px;
+  padding: 5px;
+  border-radius: 5px;
+  height: 18px;
+  margin-bottom: 10px;
+}
+
 
 #profile__chevron-left {
 background: #202020;
@@ -370,7 +430,8 @@ height: 80px;
   text-align-last: left;
 }
 
-.liked_movies__text-container p {
+.liked_movies__text-container 
+p {
   display: flex;
   align-items: center;
   font-size: 18px;
@@ -378,7 +439,8 @@ height: 80px;
  
    }
 
-.liked_movies__text-container div {
+.liked_movies__text-container 
+div {
   font-size: 14px;
    text-align: start;
 }
