--- a/src/components/FilterPage/FilterGroup.css
+++ b/src/components/FilterPage/FilterGroup.css
@@ -19,4 +19,16 @@
   border-radius: 8px;
   background: var(--prime-700);
   margin: 4px;
+  cursor: pointer;
+}
+
+.filterGroup__optionActive {
+  white-space: nowrap;
+  padding: 8px 16px;
+  display: inline-block;
+  border-radius: 8px;
+  background: var(--dark-100);
+  margin: 4px;
+  color: var(--prime-500);
+  cursor: pointer;
 }
