--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -128,11 +128,20 @@ top: 600px;
         }
 
 .profile__text-container {
-    display: flex;
-    justify-content: space-between;
-    width: 99%;
-    padding-bottom: 20px;
+  display: grid;
+  grid-template-columns: 100px 200px 30px;
+  width: 99%;
+  padding-bottom: 20px;
     }
+
+.profile__text-container p {
+ text-align: right;
+}
+
+.profile__text-container span {
+  text-align: left;
+}
+
 
   .profile__footer {  
     position: absolute;
@@ -273,14 +282,12 @@ input {
   }
 
 .profile__edit-footer {
-  height: 100px;
+  height: 86px;
   display: flex;
   align-items: center;
   justify-content: center;
   font-size: 20px;
   font-weight: bold;
-  justify-content: space-around;
-
 }
 
 #profile__edit-picture-container{
@@ -435,17 +442,6 @@ span {
   margin-bottom: 10px;
 }
 
-
-#profile__chevron-left {
-background: #202020;
-height: 40px;
-width: 40px;
-opacity: 0.5;
-  border-radius: 30px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
 
 .liked_movies__container {
   padding-bottom: 150px;
