--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -184,20 +184,35 @@ color: 9D9D9D;
 }
 
 #profile__settings {
+  /* display: grid;
+grid-template-columns: 100px 60px;
+text-align: left; */
 z-index: 2;
 background: #202020;
 opacity: 0.5;
 position: relative;
-left: 10px;
-top: 10px;
+left: 20px;
+top: 50px;
 display: flex;
 align-items: center;
 justify-content: center;
 height: 40px;
 width: 40px;
 border-radius: 30px;
+border: solid 3px blue;
 }
 
+#profile__logout {
+text-align: right;
+border: solid 3px red;
+position: absolute;
+width: 76px;
+height: 32px;
+left: 279px;
+top: 62px;
+background: rgba(5, 5, 5, 0.5);
+border-radius: 8px;
+}
 
 .profile__likes-picture,
 .profile__matches-picture {
@@ -290,6 +305,11 @@ input {
   font-weight: bold;
 }
 
+/* .profile__avatar {
+  position: fixed;
+  left: 40;
+} */
+
 #profile__edit-picture-container{
   display:flex;
   align-items: center;
@@ -336,14 +356,18 @@ span {
 }
 
 .profile__bttn{
-  margin: 20px;
-  height: 40px;
-  width: 200px;
-  font-size: 25px;
+  background: #EE6258;
+  border-radius: 8px;
+  width: 245px;
+  height: 56px;
+  left: 56px;
+  bottom: 397px;
+  color: white;
 }
 
 .profile__edit-likes-friends {
   margin-bottom: 150px;
+  margin-top: 15px;
   text-align: start;
 }
 
@@ -493,4 +517,3 @@ div {
 display: grid;
 grid-template-columns: 70px 100px;
 }
-
