--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -517,3 +517,14 @@ div {
 display: grid;
 grid-template-columns: 70px 100px;
 }
+
+.canvas {
+  background: #fff;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.5);
+  display: block;
+  margin: 0 auto;
+}
+
+.single-image {
+  width: 50px;
+}
